# HARIS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LEGAL_NOTICE.md  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
config/: default_config.yaml  scanner_data.yaml
config/scanners/: nikto.yaml  nmap.yaml  nuclei.yaml  sslyze.yaml  wapiti.yaml
docs/: architecture.md  authentication.md  integrating_tools.md  llm_integration.md  methodology.md  writing_checks.md
scripts/: run_scan.py
src/: __init__.py
src/auth/: bootstrap.py  email.py  middleware.py  models.py  oidc.py  router.py  security_headers.py  service.py
src/checks/: __init__.py  cookie_checks.py  header_checks.py  info_disclosure.py  misc_checks.py  tls_checks.py
src/config/: __init__.py  loader.py
src/core/: __init__.py  context.py  correlator.py  decorators.py  engine.py  finding.py  owasp.py  profiles.py  remediation.py  risk.py  runner.py  scanner.py  target.py
src/data/: __init__.py  scanner_config.py
src/db/: __init__.py  store.py
src/llm/: __init__.py  base.py  correlation.py  enrichment.py  enrichment_prompts.py  prompts.py  qa.py  retriever.py  router.py  template_loader.py  triage.py  variant_analysis.py
src/models/: __init__.py  chat.py  config.py  correlator.py  enrichment.py  enums.py  finding.py  llm.py  owasp.py  profiles.py  remediation.py  risk.py  scan_config_template.py  scan_context.py  scanner.py  session.py  target.py  templates.py
src/reporting/: __init__.py  base.py  html_report.py  json_report.py  markdown_report.py
src/scanners/: __init__.py  nikto_scanner.py  nmap_scanner.py  nuclei_scanner.py  sslyze_scanner.py  wapiti_scanner.py
src/templates/: __init__.py  adapters.py  manager.py  report.py  updater.py
src/web/: __init__.py  app.py  llm_routes.py
src/web/static/: main.js  style.css  theme-init.js
src/web/templates/: _scan_rows.html  base.html  dashboard.html  licenses.html  scan_detail.html  (+7 more)
tests/: test_auth_email.py  test_auth_service.py  test_chat.py  test_correlator.py  test_db.py  test_engine.py  test_enrichment.py  test_finding.py  test_llm.py  test_nuclei_scanner.py  test_owasp.py  test_profiles.py  test_remediation.py  test_reporting.py  test_retriever.py  test_risk.py  test_router.py  test_runner.py  test_scan_config_templates.py  test_scan_context.py  test_schema_v6.py  test_target.py  test_templates.py
(+20 files in other folders)
